@@ -1,7 +1,6 @@
 package io.github.gear4jtest.core.sidecompute;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import io.github.gear4jtest.core.event.EventSubscription;
 import io.github.gear4jtest.core.execution.ExecutionContextRegistry;
@@ -16,8 +15,7 @@ public final class SideComputeListener {
             return List.of();
         }
         return computers.stream()
-                .map(computer -> computer.toSubscription(registry))
-                .map(subscription -> (EventSubscription<?>) subscription)
-                .collect(Collectors.toList());
+                .<EventSubscription<?>>map(computer -> computer.toSubscription(registry))
+                .toList();
     }
 }
